setup folders for Home and ProductDetail

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 CompositionalLayoutDemoApp/CompositionalLayoutDemoApp.xcodeproj/project.xcworkspace/xcuserdata/daesyvences.xcuserdatad/UserInterfaceState.xcuserstate
+
+.DS_Store
